--- a/Yolo_widgets.ipynb
+++ b/Yolo_widgets.ipynb
@@ -6,7 +6,7 @@
       "name": "Yolo_widgets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOPvMdyhPW6giCVIGNpQd6/",
+      "authorship_tag": "ABX9TyNJA554P95SzCGEg2ITEuqo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2984,8 +2984,8 @@
         "outputId": "c6433b8e-406b-4398-9274-9ede0ec4ca4e"
       },
       "source": [
-        "#!wget https://raw.githubusercontent.com/airctic/icevision/master/install_colab.sh\n",
-        "#!bash install_colab.sh"
+        "!wget https://raw.githubusercontent.com/airctic/icevision/master/install_colab.sh\n",
+        "!bash install_colab.sh"
       ],
       "execution_count": null,
       "outputs": [
@@ -3137,7 +3137,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 77,
+          "height": 49,
           "referenced_widgets": [
             "937e5f2b2306485cbf98a2426cd64191",
             "b3a3f626880d44499bc1f986d6146637",
@@ -3397,7 +3397,7 @@
         "id": "o43oTbmx642M",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105,
+          "height": 85,
           "referenced_widgets": [
             "e6f092fdd07841c7917eb202298b4bd6",
             "a8d3e2038ace41088ebf34997d696eb0",
