--- a/Yolo_widgets.ipynb
+++ b/Yolo_widgets.ipynb
@@ -6,7 +6,7 @@
       "name": "Yolo_widgets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJA554P95SzCGEg2ITEuqo",
+      "authorship_tag": "ABX9TyOWL9xRGjdVovNyB0F1A443",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2984,8 +2984,8 @@
         "outputId": "c6433b8e-406b-4398-9274-9ede0ec4ca4e"
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/airctic/icevision/master/install_colab.sh\n",
-        "!bash install_colab.sh"
+        "#!wget https://raw.githubusercontent.com/airctic/icevision/master/install_colab.sh\n",
+        "#!bash install_colab.sh"
       ],
       "execution_count": null,
       "outputs": [
@@ -3102,7 +3102,7 @@
         "from icevision.all import *\n",
         "import ipywidgets as widgets"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3137,7 +3137,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 49,
+          "height": 77,
           "referenced_widgets": [
             "937e5f2b2306485cbf98a2426cd64191",
             "b3a3f626880d44499bc1f986d6146637",
@@ -3161,7 +3161,7 @@
         "dest_dir = \"fridge\"\n",
         "data_dir = icedata.load_data(url, dest_dir)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3197,7 +3197,7 @@
         "                     class_map=class_map)\n",
         "parser.class_map"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3268,7 +3268,7 @@
       "source": [
         "train_records, valid_records = parser.parse()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3339,7 +3339,7 @@
         "train_tfms = tfms.A.Adapter([*tfms.A.aug_tfms(size=image_size, presize=512), tfms.A.Normalize()])\n",
         "valid_tfms = tfms.A.Adapter([*tfms.A.resize_and_pad(image_size), tfms.A.Normalize()])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3352,7 +3352,7 @@
         "train_ds = Dataset(train_records, train_tfms)\n",
         "valid_ds = Dataset(valid_records, valid_tfms)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3373,7 +3373,7 @@
         "\n",
         "model_type, backbone, extra_args"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3397,7 +3397,7 @@
         "id": "o43oTbmx642M",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85,
+          "height": 105,
           "referenced_widgets": [
             "e6f092fdd07841c7917eb202298b4bd6",
             "a8d3e2038ace41088ebf34997d696eb0",
@@ -3418,7 +3418,7 @@
         "# Instantiate the mdoel\n",
         "model = model_type.model(backbone=backbone(pretrained=True), num_classes=len(parser.class_map), **extra_args) "
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3466,7 +3466,7 @@
         "train_dl = model_type.train_dl(train_ds, batch_size=8, num_workers=4, shuffle=True)\n",
         "valid_dl = model_type.valid_dl(valid_ds, batch_size=8, num_workers=4, shuffle=False)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3486,7 +3486,7 @@
       "source": [
         "metrics = [COCOMetric(metric_type=COCOMetricType.bbox)]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3497,7 +3497,7 @@
       "source": [
         "learn = model_type.fastai.learner(dls=[train_dl, valid_dl], model=model, metrics=metrics)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3513,7 +3513,7 @@
       "source": [
         "learn.lr_find()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3569,7 +3569,7 @@
       "source": [
         "learn.fine_tune(20, 1e-4, freeze_epochs=1)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3785,7 +3785,7 @@
       "source": [
         "learn.fine_tune(100, 3e-3, freeze_epochs=1)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4561,7 +4561,7 @@
       "source": [
         "model_type.show_results(model, valid_ds, detection_threshold=.5)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4605,7 +4605,7 @@
         "infer_dl = model_type.infer_dl(valid_ds, batch_size=4, shuffle=False)\n",
         "preds = model_type.predict_from_dl(model, infer_dl, keep_images=True)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4633,7 +4633,7 @@
       "source": [
         "iou_thres = widgets.IntSlider(value=1, min=1, max=40, step=1, description=\"Number\")"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4644,7 +4644,7 @@
       "source": [
         "btn_run = widgets.Button(description=\"Detect\")"
       ],
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4655,7 +4655,7 @@
       "source": [
         "labl_pred = widgets.HTML()#widgets.Label()"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4667,7 +4667,7 @@
         "out_img = widgets.Output()\n",
         "out_img.clear_output()"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4681,7 +4681,7 @@
         "    with out_img:\n",
         "        display(show_preds(preds=preds[:iou_thres.value]))\n"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4692,7 +4692,7 @@
       "source": [
         "btn_run.on_click(on_click_classify)\n"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4703,7 +4703,7 @@
       "source": [
         "instruction_labl = widgets.Label(\"Number of Images For Prediction\")"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4714,7 +4714,7 @@
       "source": [
         "input_widgets = widgets.VBox([instruction_labl,iou_thres,widgets.HBox([btn_run])])"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4725,7 +4725,7 @@
       "source": [
         "output_widgets = widgets.HBox([out_img])"
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4762,7 +4762,7 @@
       "source": [
         "widgets.VBox([input_widgets, output_widgets])"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
